Widgets can now be deleted

--- a/ui/src/app/data-explorer-v2/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widget/data-explorer-dashboard-widget.component.html
@@ -23,6 +23,7 @@
             <div *ngIf="widgetLoaded" class="h-100">
                 <div *ngIf="widget.widgetType === 'table'" class="h-100 p-0">
                     <sp-data-explorer-table-widget
+                            (removeWidgetCallback)="removeWidget()"
                             [viewDateRange]="viewDateRange"
                             [gridsterItem]="item"
                             [gridsterItemComponent]="gridsterItemComponent"
