--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
@@ -29,8 +29,7 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <!--<button mat-button mat-icon-button color="white" (click)="removeWidget()">-->
-            <button mat-button mat-icon-button color="white">
+            <button mat-button mat-icon-button color="white" (click)="removeWidget()">
                 <i class="material-icons">clear</i>
             </button>
         </div>
