--- a/ui/src/app/dashboard-v2/components/overview/dashboard-overview.component.html
+++ b/ui/src/app/dashboard-v2/components/overview/dashboard-overview.component.html
@@ -42,11 +42,11 @@
                 </ng-container>
 
                 <ng-container matColumnDef="open">
-                    <th fxFlex="10" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Show</th>
-                    <td fxFlex="10" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                    <th fxFlex="8" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Show</th>
+                    <td fxFlex="8" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
                         <div fxLayout="row">
                             <button mat-button mat-icon-button color="primary"
-                                    (click)="showDashboard(element)">
+                                    (click)="showDashboard(element, false)">
                                 <i class="material-icons">visibility</i>
                             </button>
                         </div>
@@ -54,8 +54,8 @@
                 </ng-container>
 
                 <ng-container matColumnDef="openWindow">
-                    <th fxFlex="10" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Window</th>
-                    <td fxFlex="10" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                    <th fxFlex="8" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Window</th>
+                    <td fxFlex="8" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
                         <div fxLayout="row">
                             <button mat-button mat-icon-button color="primary"
                                     (click)="openExternalDashboard(element)">
@@ -65,12 +65,24 @@
                     </td>
                 </ng-container>
 
-                <ng-container matColumnDef="edit">
-                    <th fxFlex="10" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Edit</th>
-                    <td fxFlex="10" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                <ng-container matColumnDef="settings">
+                    <th fxFlex="8" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Settings</th>
+                    <td fxFlex="8" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
                         <div fxLayout="row">
                             <button mat-button mat-icon-button color="primary"
                                     (click)="openEditDashboardDialog(element)">
+                                <i class="material-icons">settings</i>
+                            </button>
+                        </div>
+                    </td>
+                </ng-container>
+
+                <ng-container matColumnDef="edit">
+                    <th fxFlex="8" fxLayoutAlign="start center" mat-header-cell *matHeaderCellDef> Edit</th>
+                    <td fxFlex="8" fxLayoutAlign="start center" mat-cell *matCellDef="let element">
+                        <div fxLayout="row">
+                            <button mat-button mat-icon-button color="primary"
+                                    (click)="showDashboard(element, true)">
                                 <i class="material-icons">edit</i>
                             </button>
                         </div>
