[STREAMPIPES-79] fix table scrolling

--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.css
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.css
@@ -34,3 +34,12 @@
 .title-panel {
     font-size:20px;
 }
+
+.assemblyOptionsDataExplorer {
+    color: white;
+    padding: 5px;
+}
+
+::ng-deep .mat-form-field-wrapper {
+    padding: 0px !important;
+}
