--- a/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
@@ -16,11 +16,58 @@
   ~
   -->
 
-<!--<div class="circleNumber">-->
-    <!--<div class="title-panel" *ngIf="hasTitlePanelSettings">-->
-        <!--{{selectedTitle}}-->
-    <!--</div>-->
+<div fxLayout="column" fxLayoutAlign="stretch">
+    <div class="assemblyOptions sp-blue-bg m-0 row header h-40" style="margin-left: 0px;margin-right: 0px;">
+        <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 0px;margin-right: 0px;">
+            <mat-form-field appearance="outline">
+                <mat-label>Select Columns</mat-label>
+                <mat-select [ngModel]="this.yKeys" (selectionChange)="setSelectedColumn($event.value)" multiple>
+                    <mat-option *ngFor="let column of availableColumns" [value]="column" style="background-color: #FFFFFF">
+                        {{column}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button mat-button mat-icon-button color="white" (click)="removeWidget()">
+                <i class="material-icons">clear</i>
+            </button>
+        </div>
+    </div>
 
-    <sp-old-explorer></sp-old-explorer>
 
-<!--</div>-->
+    <div style="width: 100%; height: 500px">
+
+
+    <div fxLayout="row">
+        <!--<div *ngIf="enablePaging" fxFlex="5">-->
+            <!--<button mat-icon-button (click)="clickPreviousPage()" class="paging-button" matTooltip="Going backwards in time">-->
+                <!--<mat-icon style="font-size: 30px;height: 30px; width: 30px">-->
+                    <!--chevron_left-->
+                <!--</mat-icon>-->
+            <!--</button>-->
+        <!--</div>-->
+
+
+        <!-- Chart -->
+        <plotly-plot fxFlex
+                *ngIf="data !== undefined"
+                flex
+                [data]="data"
+                [layout]="graph.layout"
+                (relayout)="zoomIn($event)">
+        </plotly-plot>
+
+        <!--<div *ngIf="enablePaging" fxFlex="5">-->
+            <!--<button mat-icon-button (click)="clickNextPage()" class="paging-button" matTooltip="Going forwards in time">-->
+                <!--<mat-icon style="font-size: 30px;height: 30px; width: 30px">-->
+                    <!--chevron_right-->
+                <!--</mat-icon>-->
+            <!--</button>-->
+        <!--</div>-->
+    </div>
+
+
+</div>
+
+
+</div>
+
