--- a/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
@@ -64,6 +64,12 @@
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></image-widget>
                 </div>
+                <div *ngIf="widget.widgetType === 'map'" class="h-100 p-0">
+                    <map-widget [gridsterItemComponent]="gridsterItemComponent"
+                                  [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                                  [widgetConfig]="configuredWidget"
+                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></map-widget>
+                </div>
             </div>
         </div>
     </div>
