Create components for loading spinner and no data

--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
@@ -50,8 +50,12 @@
 
 
     <div style=" overflow-y: auto;" [style.max-height.px]="gridsterItem.rows * 100 - 40">
-        <table mat-table [dataSource]="dataSource" matSort>
 
+        <sp-load-data-spinner *ngIf="showIsLoadingData"></sp-load-data-spinner>
+
+        <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="viewDateRange"></sp-no-data-in-date-range>
+
+        <table *ngIf="showData" mat-table [dataSource]="dataSource" matSort>
             <ng-container *ngFor="let element of this.selectedColumns" [cdkColumnDef]="element">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header><label style="font-size: large">{{element}}</label></th>
                 <td mat-cell *matCellDef="let row">{{row[element]}}</td>
