STREAMPIPES-58: Add traffic light widget

--- a/ui/src/app/dashboard-v2/components/widgets/html/html-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widgets/html/html-widget.component.html
@@ -19,7 +19,7 @@
     <div class="title-panel mt-20" *ngIf="hasTitlePanelSettings">
         {{selectedTitle}}
     </div>
-    <div [ngStyle]="{'width': width + 'px', 'height': width + 'px'}">
+    <div [ngStyle]="{'width': width + 'px', 'height': height + 'px'}">
         <div [innerHTML]="item"></div>
     </div>
 </div>
