--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -36,8 +36,8 @@
 @import '~angular-loading-bar/build/loading-bar.min.css';
 @import '~shepherd.js/dist/css/shepherd-theme-default.css';
 @import '~leaflet/dist/leaflet.css';
+@import '~material-design-icons/iconfont/material-icons.css';
 
-@import '../assets/fonts/MaterialIcons-Regular.css';
 @import '../assets/fonts/Roboto-Regular.css';
 
 @import './sp/shepherd-new';
