--- a/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.css
+++ b/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.css
@@ -51,3 +51,17 @@
     flex: 0 1 auto;
 }
 
+.pipeline-not-running {
+    background: #ef9a9a;
+    padding: 20px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+}
+
+.disconnect-icon {
+    font-size:36pt;
+    color:#f44336;
+}
+
