--- a/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widget/dashboard-widget.component.html
@@ -30,7 +30,13 @@
         </div>
         <div class="h-100 p-0 row content">
             <!--        <div *ngIf="widget."></div>-->
-            <div *ngIf="widgetLoaded" class="h-100">
+            <div *ngIf="widgetLoaded && pipelineNotRunning" class="h-100 pipeline-not-running" fxFlex="100"
+                 fxLayout="column"
+                 fxLayoutAlign="center center">
+                <i class="material-icons disconnect-icon">block</i>
+                <h5 style="text-align:center;">corresponding pipeline is not running</h5>
+            </div>
+            <div *ngIf="widgetLoaded && !pipelineNotRunning" class="h-100">
                 <div *ngIf="widget.widgetType === 'number'" class="h-100 p-0">
                     <number-widget [gridsterItemComponent]="gridsterItemComponent" [gridsterItem]="item"
                                    [widget]="widget" [editMode]="editMode"
@@ -81,6 +87,12 @@
                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></html-widget>
+                </div>
+                <div *ngIf="widget.widgetType === 'trafficlight'" class="h-100 p-0">
+                    <traffic-light-widget [gridsterItemComponent]="gridsterItemComponent"
+                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
+                                 [widgetConfig]="configuredWidget"
+                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></traffic-light-widget>
                 </div>
             </div>
         </div>
