--- a/ui/src/app/dashboard-v2/components/widgets/trafficlight/traffic-light-widget.component.html
+++ b/ui/src/app/dashboard-v2/components/widgets/trafficlight/traffic-light-widget.component.html
@@ -19,9 +19,13 @@
     <div class="title-panel mt-20" *ngIf="hasTitlePanelSettings">
         {{selectedTitle}}
     </div>
-    <div [ngStyle]="{'width': width + 'px', 'height': height + 'px'}" class="p-10">
-        <div *ngFor="let item of items">
-            {{item}}
-        </div>
+    <div class="p-10 h-100">
+       <div class="tl-container" [ngStyle]="{'width': containerWidth + 'px', 'height': containerHeight + 'px'}">
+           <div class="light" [ngClass]="{'light-red': activeClass === 'red'}" [ngStyle]="{'width': lightWidth + 'px', 'height': lightHeight + 'px'}"></div>
+           <div class="light" [ngClass]="{'light-yellow': activeClass === 'yellow'}" [ngStyle]="{'width': lightWidth +
+           'px', 'height': lightHeight + 'px'}"></div>
+           <div class="light" [ngClass]="{'light-green': activeClass === 'green'}" [ngStyle]="{'width':
+           lightWidth + 'px', 'height': lightHeight + 'px'}"></div>
+       </div>
     </div>
 </div>
