--- a/ui/src/app/dashboard-v2/dialogs/add-widget/add-visualization-dialog.component.html
+++ b/ui/src/app/dashboard-v2/dialogs/add-widget/add-visualization-dialog.component.html
@@ -31,35 +31,33 @@
             <div fxFlex="100" style="margin:5px;width:100%">
                 <div *ngIf="page == 'select-pipeline'">
                     <h4>{{pages[0].description}}</h4>
-                    <mat-grid-list
-                            [cols]="3" [rowHeight]="200"
-                            [gutterSize]="100">
-
-                        <mat-grid-tile class="gray" *ngFor="let pipeline of visualizablePipelines">
-                            <div [ngClass]="getSelectedPipelineCss(pipeline)"
-                                 (click)="selectPipeline(pipeline)">
-                                {{iconText(pipeline.visualizationName)}}
-                                <h5>{{pipeline.visualizationName}}</h5>
+                    <mat-list>
+                        <mat-list-item *ngFor="let pipeline of visualizablePipelines"
+                                       (click)="selectPipeline(pipeline)" class="list-item">
+                            <div mat-list-avatar
+                                 class="pipeline-avatar sp-accent-bg">{{iconText(pipeline.visualizationName)}}
                             </div>
-                        </mat-grid-tile>
-                    </mat-grid-list>
+                            <h4 mat-line>{{pipeline.pipelineName}}</h4>
+                            <p mat-line>{{pipeline.visualizationName}} </p>
+                        </mat-list-item>
+                    </mat-list>
                 </div>
 
                 <!-- Select Type -->
                 <div *ngIf="page == 'select-widget'" fxLayout="column">
                     <h4>{{pages[1].description}}</h4>
-                    <mat-grid-list
-                            [cols]="3" [rowHeight]="200"
-                            [gutterSize]="100">
-
-                        <mat-grid-tile class="gray" *ngFor="let widget of availableWidgets">
-                            <div [ngClass]="getSelectedPipelineCss(widget.widgetLabel)"
-                                 (click)="selectWidget(widget)">
-                                {{iconText(widget.widgetLabel)}}
-                                <h5>{{widget.widgetLabel}}</h5>
+                    <mat-list>
+                        <mat-list-item *ngFor="let widget of availableWidgets"
+                                       (click)="selectWidget(widget)" class="list-item">
+                            <div mat-list-avatar
+                                 class="pipeline-avatar sp-accent-bg">
+                                <span *ngIf="!widget.widgetIconName">{{iconText(widget.widgetLabel)}}</span>
+                                <span *ngIf="widget.widgetIconName"><i class="{{widget.widgetIconName}}"></i></span>
                             </div>
-                        </mat-grid-tile>
-                    </mat-grid-list>
+                            <h4 mat-line>{{widget.widgetLabel}}</h4>
+                            <p mat-line>{{widget.widgetDescription}} - {{widget.widgetIconName}} </p>
+                        </mat-list-item>
+                    </mat-list>
                 </div>
 
                 <!-- Select Scheme -->
