--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -363,7 +363,7 @@ md-content {
   margin: 10px;
   border: 1px solid #cccccc;
   min-height: calc(100% - 20px);
-  height: 100%;
+  //height: 100%;
 }
 
 .page-container-no-border {
