--- a/ui/src/app/dashboard/dashboard.component.html
+++ b/ui/src/app/dashboard/dashboard.component.html
@@ -44,7 +44,7 @@
 
     </dashboard-overview>
     <dashboard-panel fxLayout="column" [(editMode)]="editMode" [dashboard]="selectedDashboard"
-                     style="height:100%;" *ngIf="dashboardTabSelected">
+                     class="dashboard-panel" *ngIf="dashboardTabSelected">
 
     </dashboard-panel>
     </div>
