--- a/ui/src/app/dashboard/components/panel/dashboard-panel.component.html
+++ b/ui/src/app/dashboard/components/panel/dashboard-panel.component.html
@@ -16,8 +16,8 @@
   ~
   -->
 
-<div fxFlex="100" fxLayout="column" class="m-20">
-    <div fxLayout="row wrap" style="margin-bottom:20px;" *ngIf="editMode">
+<div fxFlex="100" fxLayout="column">
+    <div fxLayout="row wrap" class="m-20" style="margin-bottom:20px;" *ngIf="editMode">
         <button mat-button mat-raised-button color="primary" (click)="updateDashboardAndCloseEditMode()"
                 style="margin-right:10px;">Save
         </button>
@@ -31,5 +31,5 @@
     <dashboard-grid [editMode]="editMode" [dashboard]="dashboard"
                     (updateCallback)="updateAndQueueItemForDeletion($event)"
                     (deleteCallback)="removeAndQueueItemForDeletion($event)"
-                    class="h-100"></dashboard-grid>
+                    class="h-100 dashboard-grid"></dashboard-grid>
 </div>
