--- a/ui/src/app/notifications/notifications.component.scss
+++ b/ui/src/app/notifications/notifications.component.scss
@@ -87,6 +87,11 @@
     cursor: pointer;
 }
 
+.selected-notification {
+    background: #E0E0E0;
+    cursor: pointer;
+}
+
 .list-item {
     border-bottom: 1px solid #BDBDBD;
 }
