--- a/ui/src/assets/templates/navbar.html
+++ b/ui/src/assets/templates/navbar.html
@@ -30,7 +30,7 @@
                             alt="icon" src="assets/img/sp/sp-logo-right-white.png" style="height:28px;">
                 </div>
                 <div style="color:white;padding: 5px 5px;font-size:15px;margin-left:10px;">
-                    <h4 style="margin-top:18px;font-size:12pt;font-weight:bold;">{{toolbarCtrl.getActivePage()}}</h4>
+                    <h4 style="margin-top:18px;font-size:12pt;font-weight:bold;">{{toolbarCtrl.activePageName}}</h4>
                 </div>
             </h1>
         </div>
