--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
@@ -21,7 +21,7 @@
 <div fxLayout="column" fxLayoutAlign="stretch">
     <div class="assemblyOptionsDataExplorer sp-blue-bg m-0 row header h-40" style="margin-left: 0px;margin-right: 0px;">
         <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 0px;margin-right: 0px;">
-            <sp-select-keys (changeSelectedKeys)="setSelectedColumn($event)" [availableKeys]="availableColumns" [selectedKeys]="selectedColumns"></sp-select-keys>
+            <sp-select-properties (changeSelectedProperties)="setSelectedColumn($event)" [availableProperties]="availableColumns" [selectedProperties]="selectedColumns"></sp-select-properties>
             <button mat-button mat-icon-button color="white" (click)="removeWidget()">
                 <i class="material-icons">clear</i>
             </button>
@@ -34,14 +34,24 @@
 
         <sp-no-data-in-date-range *ngIf="showNoDataInDateRange" [viewDateRange]="viewDateRange"></sp-no-data-in-date-range>
 
-        <table *ngIf="showData" mat-table [dataSource]="dataSource" matSort>
-            <ng-container *ngFor="let element of this.selectedColumns" [cdkColumnDef]="element">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header><label style="font-size: large">{{element}}</label></th>
-                <td mat-cell *matCellDef="let row">{{row[element]}}</td>
+        <table *ngIf="showData" mat-table [dataSource]="dataSource" matSort >
+            <ng-container *ngFor="let element of this.selectedColumns" [cdkColumnDef]="element.runtimeName">
+
+                <div *ngIf="!isTimestamp(element)">
+                    <!--                <td *ngIf="isTimestamp(property)">{{runtimeData[property.properties.runtimeName] | date:'yyyy-MM-dd HH:mm:ss '}}</td>-->
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header><label style="font-size: large">{{element.runtimeName}}</label></th>
+                    <td mat-cell *matCellDef="let row"style="text-align: center;">{{row[element.runtimeName]}}</td>
+
+                </div>
+                <div *ngIf="isTimestamp(element)">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header><label style="font-size: large">{{element.runtimeName}}</label></th>
+                    <td mat-cell  *matCellDef="let row"style="text-align: left;">{{row[element.runtimeName]| date:'yyyy-MM-dd HH:mm:ss'}}</td>
+
+                </div>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="this.selectedColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: selectedColumns;"></tr>
+            <tr mat-header-row *matHeaderRowDef="this.columnNames; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnNames;"></tr>
 
         </table>
     </div>
