--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -35,6 +35,7 @@
 @import '~prismjs/themes/prism.css';
 @import '~angular-loading-bar/build/loading-bar.min.css';
 @import '~shepherd.js/dist/css/shepherd-theme-default.css';
+@import "~ng-pick-datetime/assets/style/picker.min.css";
 @import '~leaflet/dist/leaflet.css';
 @import '~material-design-icons/iconfont/material-icons.css';
 
