--- a/ui/src/app/dashboard/components/widgets/number/number-widget.component.css
+++ b/ui/src/app/dashboard/components/widgets/number/number-widget.component.css
@@ -31,6 +31,19 @@
     font-weight:bold;
 }
 
+.measurementUnitItem {
+    font-size: 20px;
+    display:flex;
+    justify-content: center;
+}
+
 .title-panel {
     font-size:20px;
+}
+
+.value-panel {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
