refactored node controller

--- a/ui/src/app/configuration/configuration.component.html
+++ b/ui/src/app/configuration/configuration.component.html
@@ -22,7 +22,7 @@
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)">
                 <mat-tab label="Pipeline Element Configuration"></mat-tab>
                 <mat-tab label="Messaging"></mat-tab>
-                <mat-tab label="Edge Nodes"></mat-tab>
+                <mat-tab label="Nodes"></mat-tab>
             </mat-tab-group>
         </div>
     </div>
