--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
@@ -32,3 +32,44 @@ mat-card {
     box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
     margin: 10px;
 }
+
+ul {
+    column-count: 3;
+}
+
+li {
+    color: darkgrey;
+    font-size: 12px;
+}
+
+.div-node-tag{
+     display: inline-block;
+     margin-bottom: 10px;
+ }
+
+.span-node-tag{
+    font-size: 12px;
+    font-weight: bold;
+    color: whitesmoke;
+    background: dimgray;
+    padding: 5px;
+}
+
+.div-sa-tag{
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.span-sa-tag{
+    font-size: 12px;
+    font-weight: bold;
+    color: whitesmoke;
+    background: lightslategray;
+    padding: 5px;
+}
+
+.node-header-avatar {
+    /*background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');*/
+    color: darkgray;
+    padding-top: 6px;
+}
