--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
@@ -40,19 +40,25 @@
                             <div class="div-node-tag" *ngFor="let tag of node.nodeMetadata.nodeLocationTags">
                                 <span class="span-node-tag">{{tag}}</span>&nbsp;
                             </div>
-<!--                            <div class="div-sa-tag" *ngFor="let element of node.nodeResources.accessibleSensorActuatorResource">-->
-<!--                                <span class="span-sa-tag">{{element.name}}</span>&nbsp;-->
-<!--                            </div>-->
-                                <ul class="fa-ul">
-                                    <li><span class="fa-li" style="color: darkgray"><i class="fas fa-link"></i></span>{{node.nodeMetadata.nodeAddress}}</li>
-                                    <li><span class="fa-li" style="color: darkgray"><i class="fab fa-docker"></i></span>{{node.nodeResources.softwareResource.docker.serverVersion}}</li>
-                                    <li><span class="fa-li" style="color: darkgray"><i class="fas fa-cube"></i></span>{{node.nodeResources.softwareResource.os}}</li>
+                            <div class="div-sa-tag" *ngFor="let element of node.nodeResources.accessibleSensorActuatorResource">
+                                <span class="span-sa-tag">{{element.name}}</span>&nbsp;
+                            </div>
+                            <div>
+                                <ul class="ft-foot">
+                                    <li><span class="inclusion" style="color: darkgray"><i class="fas fa-link"></i></span>{{node.nodeMetadata.nodeAddress}}</li>
+                                    <li><span class="inclusion" style="color: darkgray"><i class="fab fa-docker"></i></span>{{node.nodeResources.softwareResource.docker.serverVersion}}</li>
+                                    <li><span class="inclusion" style="color: darkgray"><i class="fas fa-cube"></i></span>{{node.nodeResources.softwareResource.os}}</li>
                                 </ul>
-                                <ul class="fa-ul">
-                                    <li><span class="fa-li" style="color: darkgray"><i class="fas fa-microchip"></i></span><b>{{node.nodeResources.hardwareResource.cpu.cores}}</b> cores</li>
-                                    <li><span class="fa-li" style="color: darkgray"><i class="fas fa-memory"></i></span><b>{{node.nodeResources.hardwareResource.memory.memTotal}}</b> GiB</li>
-                                    <li><span class="fa-li" style="color: darkgray"><i class="fas fa-hdd"></i></span><b>{{node.nodeResources.hardwareResource.disk.diskTotal}}</b> GiB</li>
+                            </div>
+                            <br>
+                            <div>
+                                <ul class="ft-foot-4">
+                                    <li><span class="inclusion" style="color: darkgray"><i class="fas fa-microchip"></i></span><b>{{node.nodeResources.hardwareResource.cpu.cores}}</b> cores</li>
+                                    <li><span class="inclusion" style="color: darkgray"><i class="fas fa-memory"></i></span><b>{{node.nodeResources.hardwareResource.memory.memTotal}}</b> GiB</li>
+                                    <li><span class="inclusion" style="color: darkgray"><i class="fas fa-hdd"></i></span><b>{{node.nodeResources.hardwareResource.disk.diskTotal}}</b> GiB</li>
+                                    <li><span class="inclusion" style="color: darkgray"><i class="fas fa-meteor"></i></span>GPU <b>{{node.nodeResources.softwareResource.docker.hasNvidiaRuntime}}</b></li>
                                 </ul>
+                            </div>
                         </mat-card-content>
                         <mat-card-actions>
                         </mat-card-actions>
