--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
@@ -29,13 +29,8 @@
 }
 
 mat-card {
-    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
     margin: 10px;
-}
-
-
-#resources {
-    column-count: 4;
 }
 
 li {
@@ -80,6 +75,7 @@ li {
     float: left;
     width: 100%;
     padding: 3px 5px;
+    margin-bottom: 1px;
     text-align:center;
 }
 
@@ -88,6 +84,7 @@ li {
     float: left;
     width: 100%;
     padding: 3px 5px;
+    margin-bottom: 1px;
     text-align:center;
 }
 .ft-foot .ft-foot-4 ul li {
@@ -105,4 +102,13 @@ li {
     display: block;
     font-size: 10px;
     text-transform: uppercase;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 0.6em 3em;
+    padding: 0;
 }
