--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
@@ -35,7 +35,7 @@ mat-card {
 
 li {
     color: darkgrey;
-    font-size: 12px;
+    font-size: 13px;
 }
 
 .div-node-tag{
@@ -70,20 +70,20 @@ li {
     padding-top: 6px;
 }
 
-.ft-foot-4 {
-    column-count: 4;
-    float: left;
-    width: 100%;
-    padding: 3px 5px;
-    margin-bottom: 1px;
-    text-align:center;
-}
+/*.ft-foot-4 {*/
+/*    column-count: 4;*/
+/*    float: left;*/
+/*    width: 100%;*/
+/*    padding: 3px 0px;*/
+/*    margin-bottom: 1px;*/
+/*    text-align:center;*/
+/*}*/
 
 .ft-foot {
     column-count: 3;
     float: left;
     width: 100%;
-    padding: 3px 5px;
+    padding: 3px 0px;
     margin-bottom: 1px;
     text-align:center;
 }
