Add keeping the labeling mode active after entering it per button click

--- a/ui/src/app/core-ui/linechart/lineChart.component.html
+++ b/ui/src/app/core-ui/linechart/lineChart.component.html
@@ -36,7 +36,7 @@
                      [data]="dataToDisplay"
                      [layout]="graph.layout"
                      [config]="graph.config"
-                     (relayout)="zoomIn($event)"
+                     (relayout)="handleDefaultModeBarButtonClicks($event)"
                      (selecting)="selectDataPoints($event)">
         </plotly-plot>
 
