--- a/ui/src/scss/sp/buttons.scss
+++ b/ui/src/scss/sp/buttons.scss
@@ -76,6 +76,12 @@
   color: rgba(255, 255, 255, 0.75);
 }
 
+.mat-raised-button.small-button {
+    padding: 0.25em 0.75em;
+    font-size: 0.8em;
+    max-height: 20px;
+}
+
 .mat-raised-button.mat-primary:hover:enabled {
   background: $sp-color-accent-light-blue;
   -webkit-transition: all 0.75s ease;
